# office-betting

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/mirustech/betting/: config.py  database.py  main.py  seed.py
backend/src/mirustech/betting/models/: __init__.py  bet.py  outcome.py  user.py  wager.py
backend/src/mirustech/betting/routers/: __init__.py  auth.py  bets.py  leaderboard.py
backend/src/mirustech/betting/schemas/: __init__.py  auth.py  bet.py  wager.py
backend/src/mirustech/betting/services/: __init__.py  auth.py  betting.py  payout.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BetCard.tsx  Countdown.tsx  Disclaimer.tsx  Layout.tsx  OddsDisplay.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: BetDetail.tsx  CreateBet.tsx  Home.tsx  Leaderboard.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/types/: index.ts
presentations/: claude-code-tutorial.md  getting-started-claude-code.md  office-betting-demo.md  presenterm.yaml
